# gologincase

./: .gitignore  CMakeLists.txt  README.md  messages.json
config/: gologin.json  server.json
contrib/google/: tagged_json.hpp  tagged_tuple.hpp
resources/: icon.xpm
src/auth/provider/: provider.cpp  provider.hpp
src/client/: app.cpp  app.hpp  frame.cpp  frame.hpp  main.cpp
src/core/: core.hpp  dispatcher.hpp  error.cpp  error.hpp  headers.hpp  logger.hpp  packer.hpp  types.hpp
src/messages/: messages.hpp
src/messages/json/: packer.hpp
src/server/: app.cpp  app.hpp  main.cpp
src/tcp/client/: client.cpp  client.hpp
src/tcp/core/: core.cpp  core.hpp  dispatcher.hpp
src/tcp/server/: server.cpp  server.hpp
